--- a/Tegami/StrokeAnimation/MainWindow.xaml
+++ b/Tegami/StrokeAnimation/MainWindow.xaml
@@ -32,13 +32,29 @@
             <Canvas x:Name="Lines" Height="720" Width="1280" Background="Transparent"/>
         </Canvas>
 
-        <Slider x:Name="VideoOpacity" Canvas.Left="1360" Canvas.Top="25" Width="130" Maximum="1" ValueChanged="VideoOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="VideoDisplay" Content="Video" Canvas.Left="1295" Canvas.Top="25" Unchecked="VideoDisplay_Unchecked" Checked="VideoDisplay_Checked" IsChecked="True" Focusable="False"/>
+        <Slider x:Name="VideoOpacity" Canvas.Left="1360" Canvas.Top="86" Width="130" Maximum="1" ValueChanged="VideoOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="VideoDisplay" Content="Video" Canvas.Left="1295" Canvas.Top="86" Unchecked="VideoDisplay_Unchecked" Checked="VideoDisplay_Checked" IsChecked="True" Focusable="False"/>
 
-        <Slider x:Name="LinesOpacity" Canvas.Left="1360" Canvas.Top="45" Width="130" Maximum="1" ValueChanged="LinesOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="LinesDisplay" Content="Lines" Canvas.Left="1295" Canvas.Top="45" Unchecked="LinesDisplay_Unchecked" Checked="LinesDisplay_Checked" Focusable="False" IsChecked="True"/>
+        <Slider x:Name="LinesOpacity" Canvas.Left="1360" Canvas.Top="106" Width="130" Maximum="1" ValueChanged="LinesOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="LinesDisplay" Content="Lines" Canvas.Left="1295" Canvas.Top="106" Unchecked="LinesDisplay_Unchecked" Checked="LinesDisplay_Checked" Focusable="False" IsChecked="True"/>
 
         <Slider x:Name="VolumeLevel" Canvas.Left="1360" Canvas.Top="726" Width="130" Maximum="1" ValueChanged="VolumeLevel_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
         <CheckBox x:Name="Volume" Content="Volume" Canvas.Left="1295" Canvas.Top="726" Unchecked="Volume_Unchecked" Checked="Volume_Checked" Focusable="False" IsChecked="True"/>
+
+        <GroupBox Header="Tools" Height="55" Canvas.Left="1295" Canvas.Top="25" Width="195" BorderThickness="1">
+            <Canvas>
+                <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32">
+                    <Button.Background>
+                        <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/super waki.png"/>
+                    </Button.Background>
+                </Button>
+                <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32" Canvas.Left="37">
+                    <Button.Background>
+                        <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/sesame street.jpg"/>
+                    </Button.Background>
+                </Button>
+            </Canvas>
+        </GroupBox>
+
     </Canvas>
 </Window>
