Added colorblack tool; fixed bug where opacity was being set for newly drawn lines and color rects

--- a/Tegami/StrokeAnimation/MainWindow.xaml
+++ b/Tegami/StrokeAnimation/MainWindow.xaml
@@ -10,6 +10,8 @@
     <Window.CommandBindings>
         <CommandBinding Command="{x:Static local:Commands.Import}" Executed="Import_Click"/>
         <CommandBinding Command="{x:Static local:Commands.PlayPause}" Executed="Player_PlayPause"/>
+        <CommandBinding Command="{x:Static local:Commands.Draw}" Executed="Draw_Click"/>
+        <CommandBinding Command="{x:Static local:Commands.ColorBlack}" Executed="ColorBlack_Click"/>
     </Window.CommandBindings>
 
     <Canvas HorizontalAlignment="Left" VerticalAlignment="Top" Width="1500" Height="786" OpacityMask="Black">
@@ -25,7 +27,9 @@
         <MediaElement x:Name="Player" Height="720" VerticalAlignment="Top" Width="1280" MediaOpened="Player_MediaOpened" LoadedBehavior="Manual" UnloadedBehavior="Manual" Canvas.Top="25" Canvas.Left="10" ScrubbingEnabled="True" OpacityMask="Black"/>
 
         <Canvas x:Name="Panel" Height="720" Canvas.Left="10" Canvas.Top="25" Width="1280" Loaded="Panel_Loaded" Background="Transparent" MouseWheel="Panel_MouseWheel">
-            <Canvas x:Name="Colors" Height="720" Width="1280" Background="Transparent">
+            <Canvas x:Name="ColorWhites" Height="720" Width="1280" Background="Transparent">
+            </Canvas>
+            <Canvas x:Name="ColorBlacks" Height="720" Width="1280" Background="Transparent">
             </Canvas>
             <Canvas x:Name="Lines" Height="720" Width="1280" Background="Transparent">
             </Canvas>
@@ -36,7 +40,7 @@
         <Label Content="/" Canvas.Left="1386" Canvas.Top="746" FontSize="18"/>
         <Label x:Name="TotalTime" Content="00:00:000" Canvas.Left="1403" Canvas.Top="746" FontSize="18"/>
 
-        <TreeView Height="530" Canvas.Left="1295" Canvas.Top="191" Width="194" Focusable="False"/>
+        <TreeView Height="572" Canvas.Left="1295" Canvas.Top="149" Width="194" Focusable="False"/>
         <Slider x:Name="ColorsOpacity" Canvas.Left="1360" Canvas.Top="126" Width="130" Maximum="1" ValueChanged="ColorsOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
         <CheckBox x:Name="ColorsDisplay" Content="Colors" Canvas.Left="1295" Canvas.Top="126" Unchecked="ColorsDisplay_Unchecked" Checked="ColorsDisplay_Checked" Focusable="False" IsChecked="True"/>
 
@@ -59,6 +63,11 @@
                 <ToggleButton x:Name="ColorWhite" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32" Canvas.Left="37" Click="ColorWhite_Click" Focusable="False">
                     <ToggleButton.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/sesame street.jpg"/>
+                    </ToggleButton.Background>
+                </ToggleButton>
+                <ToggleButton x:Name="ColorBlack" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32" Canvas.Left="74" Click="ColorBlack_Click" Focusable="False">
+                    <ToggleButton.Background>
+                        <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/sEsAmEe StReEt.jpg"/>
                     </ToggleButton.Background>
                 </ToggleButton>
             </Canvas>
