Draws previous frame; can skip frames by using up and down arrows; fixed a case where lines/rectangles were being drawn when they shouldn't be; fixed floating point error during frame finding; able to load a frame by clicking FramesView

--- a/Tegami/StrokeAnimation/MainWindow.xaml
+++ b/Tegami/StrokeAnimation/MainWindow.xaml
@@ -15,6 +15,10 @@
         <CommandBinding Command="{x:Static local:Commands.PlayPause}" Executed="Player_PlayPause"/>
         <CommandBinding Command="{x:Static local:Commands.Draw}" Executed="Draw_Click"/>
         <CommandBinding Command="{x:Static local:Commands.ColorBlack}" Executed="ColorBlack_Click"/>
+        <CommandBinding Command="{x:Static local:Commands.Left}" Executed="PreviousFrame"/>
+        <CommandBinding Command="{x:Static local:Commands.Right}" Executed="NextFrame"/>
+        <CommandBinding Command="{x:Static local:Commands.Up}" Executed="PreviousFrame"/>
+        <CommandBinding Command="{x:Static local:Commands.Down}" Executed="NextFrame"/>
     </Window.CommandBindings>
 
     <Canvas HorizontalAlignment="Left" VerticalAlignment="Top" Width="1500" Height="786" OpacityMask="Black">
@@ -25,9 +29,18 @@
                 <MenuItem x:Name="Open" Header="Open" Command="{x:Static local:Commands.Open}" Focusable="False" />
                 <MenuItem x:Name="Save" Header="Save" Command="{x:Static local:Commands.Save}" Focusable="False" />
             </MenuItem>
-        </Menu>
+        </Menu>  
 
         <MediaElement x:Name="Player" Height="720" VerticalAlignment="Top" Width="1280" MediaOpened="Player_MediaOpened" LoadedBehavior="Manual" UnloadedBehavior="Manual" Canvas.Top="25" Canvas.Left="10" ScrubbingEnabled="True" OpacityMask="Black"/>
+
+        <Canvas x:Name="PreviousPanel" Height="730" Canvas.Left="5" Canvas.Top="20" Width="1290" Background="Transparent">
+            <Canvas x:Name="PreviousColorWhites" Height="730" Width="1290" Background="Transparent">
+            </Canvas>
+            <Canvas x:Name="PreviousColorBlacks" Height="730" Width="1290" Background="Transparent">
+            </Canvas>
+            <Canvas x:Name="PreviousLines" Height="730" Width="1290" Background="Transparent">
+            </Canvas>
+        </Canvas>
 
         <Canvas x:Name="Panel" Height="730" Canvas.Left="5" Canvas.Top="20" Width="1290" Loaded="Panel_Loaded" Background="Transparent" MouseWheel="Panel_MouseWheel">
             <Canvas x:Name="ColorWhites" Height="730" Width="1290" Background="Transparent">
@@ -43,7 +56,7 @@
         <Label Content="/" Canvas.Left="1386" Canvas.Top="746" FontSize="18"/>
         <Label x:Name="TotalTime" Content="00:00:000" Canvas.Left="1403" Canvas.Top="746" FontSize="18"/>
 
-        <ListBox x:Name="FramesView" Height="572" Canvas.Left="1295" Canvas.Top="149" Width="195" Focusable="False" PreviewMouseDown="FramesView_PreviewMouseDown">
+        <ListBox x:Name="FramesView" Height="552" Canvas.Left="1295" Canvas.Top="189" Width="195" Focusable="False" PreviewMouseDown="FramesView_PreviewMouseDown">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Focusable" Value="False"/>
@@ -61,17 +74,20 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Slider x:Name="ColorsOpacity" Canvas.Left="1360" Canvas.Top="126" Width="130" Maximum="1" ValueChanged="ColorsOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="ColorsDisplay" Content="Colors" Canvas.Left="1295" Canvas.Top="126" Unchecked="ColorsDisplay_Unchecked" Checked="ColorsDisplay_Checked" Focusable="False" IsChecked="True"/>
+        <Slider x:Name="ColorsOpacity" Canvas.Left="1365" Canvas.Top="166" Width="125" Maximum="1" ValueChanged="ColorsOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="ColorsDisplay" Content="Colors" Canvas.Left="1295" Canvas.Top="166" Unchecked="ColorsDisplay_Unchecked" Checked="ColorsDisplay_Checked" Focusable="False" IsChecked="True"/>
 
-        <Slider x:Name="VideoOpacity" Canvas.Left="1360" Canvas.Top="86" Width="130" Maximum="1" ValueChanged="VideoOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <Slider x:Name="VideoOpacity" Canvas.Left="1365" Canvas.Top="86" Width="125" Maximum="1" ValueChanged="VideoOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
         <CheckBox x:Name="VideoDisplay" Content="Video" Canvas.Left="1295" Canvas.Top="86" Unchecked="VideoDisplay_Unchecked" Checked="VideoDisplay_Checked" IsChecked="True" Focusable="False"/>
 
-        <Slider x:Name="LinesOpacity" Canvas.Left="1360" Canvas.Top="106" Width="130" Maximum="1" ValueChanged="LinesOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="LinesDisplay" Content="Lines" Canvas.Left="1295" Canvas.Top="106" Unchecked="LinesDisplay_Unchecked" Checked="LinesDisplay_Checked" Focusable="False" IsChecked="True"/>
+        <Slider x:Name="LinesOpacity" Canvas.Left="1365" Canvas.Top="126" Width="125" Maximum="1" ValueChanged="LinesOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="LinesDisplay" Content="Lines" Canvas.Left="1295" Canvas.Top="126" Unchecked="LinesDisplay_Unchecked" Checked="LinesDisplay_Checked" Focusable="False" IsChecked="True"/>
 
-        <Slider x:Name="VolumeLevel" Canvas.Left="1360" Canvas.Top="726" Width="130" Maximum="1" ValueChanged="VolumeLevel_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="Volume" Content="Volume" Canvas.Left="1295" Canvas.Top="726" Unchecked="Volume_Unchecked" Checked="Volume_Checked" Focusable="False" IsChecked="True"/>
+        <Slider x:Name="PreviousOpacity" Canvas.Left="1365" Canvas.Top="146" Width="125" Maximum="1" ValueChanged="PreviousOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="PreviousDisplay" Content="Previous" Canvas.Left="1295" Canvas.Top="146" Unchecked="PreviousDisplay_Unchecked" Checked="PreviousDisplay_Checked" Focusable="False" IsChecked="True"/>
+
+        <Slider x:Name="VolumeLevel" Canvas.Left="1365" Canvas.Top="106" Width="125" Maximum="1" ValueChanged="VolumeLevel_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="Volume" Content="Volume" Canvas.Left="1295" Canvas.Top="106" Unchecked="Volume_Unchecked" Checked="Volume_Checked" Focusable="False" IsChecked="True"/>
 
         <GroupBox Header="Tools" Height="55" Canvas.Left="1295" Canvas.Top="25" Width="195" BorderThickness="1">
             <Canvas>
