--- a/Tegami/StrokeAnimation/MainWindow.xaml
+++ b/Tegami/StrokeAnimation/MainWindow.xaml
@@ -14,7 +14,6 @@
         <CommandBinding Command="{x:Static local:Commands.Save}" Executed="Save_Click"/>
         <CommandBinding Command="{x:Static local:Commands.PlayPause}" Executed="Player_PlayPause"/>
         <CommandBinding Command="{x:Static local:Commands.Draw}" Executed="Draw_Click"/>
-        <CommandBinding Command="{x:Static local:Commands.ColorBlack}" Executed="ColorBlack_Click"/>
         <CommandBinding Command="{x:Static local:Commands.Left}" Executed="PreviousFrame"/>
         <CommandBinding Command="{x:Static local:Commands.Right}" Executed="NextFrame"/>
         <CommandBinding Command="{x:Static local:Commands.Up}" Executed="PreviousFrame"/>
@@ -33,21 +32,17 @@
 
         <MediaElement x:Name="Player" Height="720" VerticalAlignment="Top" Width="1280" MediaOpened="Player_MediaOpened" LoadedBehavior="Manual" UnloadedBehavior="Manual" Canvas.Top="25" Canvas.Left="10" ScrubbingEnabled="True" OpacityMask="Black"/>
 
-        <Canvas x:Name="PreviousPanel" Height="730" Canvas.Left="5" Canvas.Top="20" Width="1290" Background="Transparent">
-            <Canvas x:Name="PreviousColorWhites" Height="730" Width="1290" Background="Transparent">
+        <Canvas x:Name="PreviousPanel" Height="820" Canvas.Left="-40" Canvas.Top="-25" Width="1380" Background="Transparent">
+            <Canvas x:Name="PreviousColors" Height="820" Width="1380" Background="Transparent">
             </Canvas>
-            <Canvas x:Name="PreviousColorBlacks" Height="730" Width="1290" Background="Transparent">
-            </Canvas>
-            <Canvas x:Name="PreviousLines" Height="730" Width="1290" Background="Transparent">
+            <Canvas x:Name="PreviousLines" Height="820" Width="1380" Background="Transparent">
             </Canvas>
         </Canvas>
 
-        <Canvas x:Name="Panel" Height="730" Canvas.Left="5" Canvas.Top="20" Width="1290" Loaded="Panel_Loaded" Background="Transparent" MouseWheel="Panel_MouseWheel">
-            <Canvas x:Name="ColorWhites" Height="730" Width="1290" Background="Transparent">
+        <Canvas x:Name="Panel" Height="820" Canvas.Left="-40" Canvas.Top="-25" Width="1380" Loaded="Panel_Loaded" Background="Transparent" MouseWheel="Panel_MouseWheel">
+            <Canvas x:Name="Colors" Height="820" Width="1380" Background="Transparent">
             </Canvas>
-            <Canvas x:Name="ColorBlacks" Height="730" Width="1290" Background="Transparent">
-            </Canvas>
-            <Canvas x:Name="Lines" Height="730" Width="1290" Background="Transparent">
+            <Canvas x:Name="Lines" Height="820" Width="1380" Background="Transparent">
             </Canvas>
         </Canvas>
 
@@ -56,7 +51,7 @@
         <Label Content="/" Canvas.Left="1386" Canvas.Top="746" FontSize="18"/>
         <Label x:Name="TotalTime" Content="00:00:000" Canvas.Left="1403" Canvas.Top="746" FontSize="18"/>
 
-        <ListBox x:Name="FramesView" Height="532" Canvas.Left="1295" Canvas.Top="209" Width="195" Focusable="False" PreviewMouseDown="FramesView_PreviewMouseDown">
+        <ListBox x:Name="FramesView" Height="552" Canvas.Left="1295" Canvas.Top="189" Width="195" Focusable="False" PreviewMouseDown="FramesView_PreviewMouseDown">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Focusable" Value="False"/>
@@ -74,11 +69,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Slider x:Name="WhiteOpacity" Canvas.Left="1365" Canvas.Top="166" Width="125" Maximum="1" ValueChanged="WhiteOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="WhiteDisplay" Content="White" Canvas.Left="1295" Canvas.Top="166" Unchecked="WhiteDisplay_Unchecked" Checked="WhiteDisplay_Checked" Focusable="False" IsChecked="True"/>
-
-        <Slider x:Name="BlackOpacity" Canvas.Left="1365" Canvas.Top="186" Width="125" Maximum="1" ValueChanged="BlackOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
-        <CheckBox x:Name="BlackDisplay" Content="Black" Canvas.Left="1295" Canvas.Top="186" Unchecked="BlackDisplay_Unchecked" Checked="BlackDisplay_Checked" Focusable="False" IsChecked="True"/>
+        <Slider x:Name="WhiteOpacity" Canvas.Left="1365" Canvas.Top="166" Width="125" Maximum="1" ValueChanged="ColorsOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
+        <CheckBox x:Name="WhiteDisplay" Content="Colors" Canvas.Left="1295" Canvas.Top="166" Unchecked="ColorsDisplay_Unchecked" Checked="ColorsDisplay_Checked" Focusable="False" IsChecked="True"/>
 
         <Slider x:Name="VideoOpacity" Canvas.Left="1365" Canvas.Top="86" Width="125" Maximum="1" ValueChanged="VideoOpacity_ValueChanged" Value="1" SmallChange="0" LargeChange="0" Focusable="False"/>
         <CheckBox x:Name="VideoDisplay" Content="Video" Canvas.Left="1295" Canvas.Top="86" Unchecked="VideoDisplay_Unchecked" Checked="VideoDisplay_Checked" IsChecked="True" Focusable="False"/>
@@ -102,11 +94,6 @@
                 <ToggleButton x:Name="ColorWhite" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32" Canvas.Left="37" Click="ColorWhite_Click" Focusable="False">
                     <ToggleButton.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/sesame street.jpg"/>
-                    </ToggleButton.Background>
-                </ToggleButton>
-                <ToggleButton x:Name="ColorBlack" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="32" Height="32" Canvas.Left="74" Click="ColorBlack_Click" Focusable="False">
-                    <ToggleButton.Background>
-                        <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/sEsAmEe StReEt.jpg"/>
                     </ToggleButton.Background>
                 </ToggleButton>
             </Canvas>
